objects/TM_Treasury_Product_ACH_Companies__c.object
<CustomObject>
    <fields>
        <fullName>CF_ACH_Exposure_Value__c</fullName>
        <description>This field is used to capture the exposure value</description>
        <formula>CF_Requested_ACH_Company_Limit__c *  CF_File_Frequency_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Exposure Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Additional_Offset_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture additional deposit account info.</description>
        <label>Additional Offset Account</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipName>Treasury_Product_ACH_Companies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_File_Frequency_Value__c</fullName>
        <description>Used to formulate File Frequency Value based on File Frequency input.</description>
        <formula>IF(ISPICKVAL(TM_Frequency__c,&apos;Daily&apos;),3,
IF(ISPICKVAL(TM_Frequency__c,&apos;Weekly/bi-Weekly&apos;),2,
IF(ISPICKVAL(TM_Frequency__c,&apos;Monthly/bi-Monthly&apos;),1.5,
IF(ISPICKVAL(TM_Frequency__c,&apos;Quarterly/annually&apos;),1.25,
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Frequency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Offset_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture Deposit Account info.</description>
        <label>Offset Account</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipName>Treasury_Product_ACH_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Other_Description__c</fullName>
        <description>Used to capture the description of the ACH record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Transaction Type Description</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Requested_ACH_Company_Limit__c</fullName>
        <description>Used to store requested ACH Company limit info.</description>
        <label>Requested ACH Company Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_SEC_Codes__c</fullName>
        <description>Used to store SEC Codes info.</description>
        <label>SEC Codes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPD-Direct Deposit/Direct Payment</fullName>
                </value>
                <value>
                    <fullName>CCD-Corporate Credit or Debit</fullName>
                </value>
                <value>
                    <fullName>CTX-Corporate Trade Exchange</fullName>
                </value>
                <value>
                    <fullName>CCD+/CTX-Tax Payment</fullName>
                </value>
                <value>
                    <fullName>TEL- Telephone Initiated Entries</fullName>
                </value>
                <value>
                    <fullName>WEB-Internet Initiated Entries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to map ACH Companies record to the Treasury Service record.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipName>Treasury_Product_ACH_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TM_Additional_Offset_account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Offset Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Credits_Debits__c</fullName>
        <label>Credits/Debits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credits only</fullName>
                </value>
                <value>
                    <fullName>Debits only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Frequency__c</fullName>
        <label>File Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly/bi-weekly</fullName>
                    <label>Weekly/Bi-weekly</label>
                </value>
                <value>
                    <fullName>Monthly/bi-monthly</fullName>
                    <label>Monthly/Bi-monthly</label>
                </value>
                <value>
                    <fullName>Quarterly/annually</fullName>
                    <label>Quarterly/Annually</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Offset_account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Offset Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Other_Transaction_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Requested_ACH_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested ACH Limit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Same_Day_ACH__c</fullName>
        <label>Same Day ACH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Vendor payments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Treasury_Application_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Application Product</label>
        <referenceTo>TM_Treasury_Application_Product__c</referenceTo>
        <relationshipName>Treasury_Product_ACH_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ACH Company</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ACH Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACH Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CVR_ACH_Company_Maintenance_Validation</fullName>
        <active>true</active>
        <description>This VR fires when a new ACH company is added or edited when Next Treasury Review Date is less than TODAY.</description>
        <errorConditionFormula>OR(
AND(
NOT(ISNEW()),
ISCHANGED(CF_Requested_ACH_Company_Limit__c ),
CF_Treasury_Service__r.CF_Next_Treasury_Review_Date__c &lt; TODAY(),
CF_Treasury_Service__r.LLC_BI__Is_Under_Maintenance__c = true
),
AND(
ISNEW(),
CF_Treasury_Service__r.CF_Next_Treasury_Review_Date__c &lt; TODAY(),
CF_Treasury_Service__r.LLC_BI__Is_Under_Maintenance__c = true
))</errorConditionFormula>
        <errorMessage>A current Treasury Review must be completed in order to update product limits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TM_This_ACH_Companies_cant_be_edited</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name == &apos;Treasury Sales Officer&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Review&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Data Input&apos; &amp;&amp; TEXT(TM_Treasury_Application_Product__r.TM_Treasury_Application__r.TM_Application_Stage__c) &lt;&gt; &apos;Underwriting&apos;</errorConditionFormula>
        <errorMessage>This ACH Companies can’t be edited anymore as it’s at/after Signature Required stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transaction_Type_Other_need_Description</fullName>
        <active>true</active>
        <description>This VR fires when Transaction type is selected as Other and Other Transaction Type Description field left blank</description>
        <errorConditionFormula>AND( 
ISPICKVAL( TM_Transaction_Type__c , &apos;Other&apos;),
CF_Other_Description__c  = &apos;&apos;
)</errorConditionFormula>
        <errorMessage>Other Transaction Type Description need to be filled when Transaction type is Other</errorMessage>
    </validationRules>
</CustomObject>